# api_status_aggregator

./: .env.example  .env.production  .gitignore  Dockerfile  docker-compose.yaml  docker-compose.yml  docker-entrypoint.py  dockerfile  main.py  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  setup.py
application/interfaces/: __init__.py  auth0_provider.py  provider.py
application/services/: category_manager.py
domain/: __init__.py  enums.py  models.py
infrastructure/: scheduler.py
infrastructure/persistence/: db.py  models.py
infrastructure/providers/: auth0_provider.py  aws_provider.py  okta_provider.py  provider_factory.py  square_provider.py  stripe_provider.py
presentation/: __init__.py
presentation/static/: styles.css
presentation/static/js/: dashboard.js
presentation/templates/: dashboard.html  dashboard.html:Zone.Identifier  dashboard.js  example.html
presentation/web/: app.py
tests/: Auth0example.py
tests/fixtures/: auth0_status_20250303_225720.json  square_all_operational.html  stripe_status.json  www_stripestatus_com_api_v2_components_20250228_211233.json  www_stripestatus_com_api_v2_incidents_20250228_211233.json
tests/infrastructure/providers/: test_auth0_provider.py  test_aws_provider.py  test_integration_providers.py  test_okta_provider.py  test_square_provider.py  test_stripe_provider.py
tests/presentation/: test_web_interface.py
