[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-status-aggregator"
version = "0.1.0"
description = "Centralized monitoring solution for third-party API statuses"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "beautifulsoup4",
    "requests",
    "sqlalchemy",
    "psycopg2-binary",
    "apscheduler"
]

[tool.hatch.build.targets.wheel]
packages = ["api_status_aggregator"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyx?$'

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"