[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api_status_aggregator"
version = "0.1.0"
description = "Centralized monitoring solution for third-party API statuses"
requires-python = ">=3.13"
dependencies = [
    "flask==3.1.0",
    "beautifulsoup4==4.13.3",
    "requests==2.32.3",
    "apscheduler==3.11.0",
    "python-dotenv==1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov",
    "black==25.1.0",
    "mypy==1.15.0",
    "flake8==7.1.2",
    "types-requests==2.32.0.20250301"
]

[tool.hatch.build.targets.wheel]
packages = ["api_status_aggregator"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyx?$'

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"